Set minified JS version of playground

--- a/modules/docs/arrow-docs/docs/_includes/_js-bottom-docs.html
+++ b/modules/docs/arrow-docs/docs/_includes/_js-bottom-docs.html
@@ -1,22 +1,21 @@
 <!-- Jquery -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <!-- Code snippets -->
-<!-- <script src="https://unpkg.com/kotlin-playground@1"></script> -->
-<script src="{{ '/js/playground.js' | relative_url }}"></script>
+<script src="{{ '/js/playground.min.js' | relative_url }}"></script>
 <script>
 document.addEventListener('DOMContentLoaded', function() {
   KotlinPlayground('[class^="language-kotlin"]');
 });
 </script>
 <!-- Highlight -->
-<!-- <script src="{{ '/js/highlight.pack.js' | relative_url }}"></script>
+<script src="{{ '/js/highlight.pack.js' | relative_url }}"></script>
 <script>
 hljs.configure({
     languages:['kotlin']
     });
     hljs.initHighlighting();
 
-</script> -->
+</script>
 <!-- Touch gesture support -->
 <script src="{{ '/js/hammer.min.js' | relative_url }}"></script>
 <!-- Docsearch -->
