--- a/modules/docs/arrow-docs/docs/_layouts/error.html
+++ b/modules/docs/arrow-docs/docs/_layouts/error.html
@@ -41,7 +41,7 @@
       <div class="masthead-background bottom indirect-injection-next"></div>
       <div class="container indirect-injection-final">
           <div class="masthead-inner">
-              <img class="masthead-brand" src="img/arrow-brand.svg" alt="">
+              <img class="masthead-brand" src="/img/arrow-brand.svg" alt="">
               <h1 class="masthead-title">404</h1>
               <h1 class="masthead-title">Resource not found</h1>
               <a class="masthead-button button" href="/">Back to home</a>
