organize category community resources

--- a/modules/docs/arrow-docs/docs/_includes/_header-blog.html
+++ b/modules/docs/arrow-docs/docs/_includes/_header-blog.html
@@ -4,7 +4,7 @@
     <div class="masthead-background bottom indirect-injection-next"></div>
     <div class="container indirect-injection-final">
         <div class="masthead-inner">
-            <h1 class="masthead-title">Blogs & Presentations</h1>
+            <h1 class="masthead-title">Community Resources</h1>
         </div>
     </div>
 </header>
