--- a/modules/docs/arrow-docs/docs/_layouts/blog.html
+++ b/modules/docs/arrow-docs/docs/_layouts/blog.html
@@ -5,8 +5,8 @@
 {% include _nav.html %}
 {% include _header-blog.html %}
 {% include _tab.html %}
-{{content}}
+{% include _category.html %}
 {% include _footer.html %}
 {% include _js-bottom-home.html %}
 </body>
-</html> 
+</html>
