--- a/modules/docs/arrow-docs/docs/_includes/_header-blog.html
+++ b/modules/docs/arrow-docs/docs/_includes/_header-blog.html
@@ -5,6 +5,7 @@
     <div class="container indirect-injection-final">
         <div class="masthead-inner">
             <h1 class="masthead-title">Community Resources</h1>
+            <h6 class="masthead-subtitle">A selection of external links to some of the content created by maintainers and users</h6>
         </div>
     </div>
 </header>
