--- a/modules/docs/arrow-docs/docs/_includes/_nav.html
+++ b/modules/docs/arrow-docs/docs/_includes/_nav.html
@@ -1,6 +1,6 @@
 <nav id="navigation">
     <div class="navigation-brand">
-        <a href="https://github.com/arrow-kt/arrow">Λrrow</a>
+        <a href="/">Λrrow</a>
     </div>
     <ul class="navigation-menu">
         {% for item in site.data.menu.nav %}
