WIP initial implementation. Main and docs sections

--- a/modules/docs/arrow-docs/docs/_sass/components/_masthead.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_masthead.scss
@@ -119,5 +119,16 @@
               text-decoration: none;
             }
         }
+
+        .masthead-doc-version {
+          margin-top: ($base-point-grid * 3);
+
+          transform: translateZ(76px);
+          transform-style: preserve-3d;
+
+          li {
+              display: inline-block;
+          }
+        }
     }
 }
