--- a/modules/docs/arrow-docs/docs/_sass/components/_sidebar-nav.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_sidebar-nav.scss
@@ -66,4 +66,9 @@
             }
         }
     }
+
+    .sidebar-doc-version-stable {
+      border-bottom: 1px solid $brand-quaternary;
+      width: 90%
+    }
 }
