--- a/modules/docs/arrow-docs/docs/_includes/_nav.html
+++ b/modules/docs/arrow-docs/docs/_includes/_nav.html
@@ -3,7 +3,8 @@
         <a href="/">Λrrow</a>
     </div>
     <ul class="navigation-menu">
-        {% for item in site.data.menu.nav %}
+        {% include _navigation-doc-versions.html %}
+          {% for item in site.data.menu.nav %}
         <li class="navigation-menu-item {% if item.url == category.url %}active {% endif %}">
             <a href="{{ item.url }}" title="{{ item.title }}" alt="{{ item.title }}">
               {% if item.icon != "" %}
