--- a/modules/docs/arrow-docs/docs/_includes/_head.html
+++ b/modules/docs/arrow-docs/docs/_includes/_head.html
@@ -37,6 +37,8 @@
     <script src="{{ '/js/nomnoml.js' | relative_url }}"></script>
     <script src="{{ '/js/diagrams.js' | relative_url }}"></script>
 
+    <script src="{{ '/js/docVersionsToogle.js' | relative_url }}"></script>
+
     {% if jekyll.environment == 'production' and site.data.commons.google_analytics %}
         {% include _google-tag-manager.html %}
     {% endif %}
