--- a/modules/docs/arrow-docs/docs/_sass/components/_navigation.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_navigation.scss
@@ -41,6 +41,49 @@
               }
             }
         }
+
+        .dropbtn {
+          @include links($white, $white, rgba($white, 0.5), rgba($white, 0.5));
+          
+          cursor: pointer;
+          border: none;
+          background: transparent;
+          color: $white;
+          font-family: $brand-font-family;
+          font-size: 0.875rem;
+        }
+
+        .dropdown {
+          position: relative;
+          display: inline-block;
+
+          a {
+            &:hover {
+              background: darken($brand-primary, 4%);
+            }
+          }
+        }
+
+        .dropdown-content {
+          display: none;
+          position: absolute;
+          min-width: 145px;
+          overflow: auto;
+          box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+          z-index: 1;
+          margin-left: 7px;
+
+          a {
+            padding: 12px 9px;
+            text-decoration: none;
+            display: block;
+          }
+        }
+
+
+        .show {
+          display: block;
+        }
     }
 
     a {
