WIP adding top warning div

--- a/modules/docs/arrow-docs/docs/_includes/_home-doc-versions.html
+++ b/modules/docs/arrow-docs/docs/_includes/_home-doc-versions.html
@@ -25,6 +25,7 @@
         <li>
           <a class="masthead-button button" href="{{ stable_version.url }}">
             <span>{{ stable_version.title }}</span>
+            <span id="stable" class="disabled">{{ stable_version.url }}</span>
           </a>
         </li>
 
