--- a/modules/docs/arrow-docs/docs/_layouts/home.html
+++ b/modules/docs/arrow-docs/docs/_layouts/home.html
@@ -2,6 +2,7 @@
 <html>
 {% include _head.html %}
 <body>
+{% include _top-version-warning.html %}
 <div class="navigation-fade-screen"></div>
 {% include _nav.html %}
 {% include _header.html %}
