--- a/modules/docs/arrow-docs/docs/_includes/_top-version-warning.html
+++ b/modules/docs/arrow-docs/docs/_includes/_top-version-warning.html
@@ -12,6 +12,6 @@
         {{stable_version}}
       </span>
     </a>
-      ) This is the documentation for the 'stable' release.
+      ) Documentation for the 'stable' release.
     </span>
 </div>
