--- a/modules/docs/arrow-docs/docs/_sass/base/_global.scss
+++ b/modules/docs/arrow-docs/docs/_sass/base/_global.scss
@@ -77,7 +77,7 @@ html {
 
 body,
 html {
-    height: 100%;
+    height: auto;
 }
 // Typography
 // -----------------------------------------------
