--- a/modules/docs/arrow-docs/docs/_includes/_navigation-doc-versions.html
+++ b/modules/docs/arrow-docs/docs/_includes/_navigation-doc-versions.html
@@ -1,12 +1,8 @@
-{% for item in site.data.doc-versions.docVersions %}
-    {% if item.url == site.data.commons.stable_version %}
-      {% assign stable_version = item %}
-    {% endif %}
-{% endfor %}
-
 <div class="navigation-menu-item dropdown">
    {% for item in site.data.doc-versions.docMenu %}
-        <li onclick="displayToogle()" class="dropbtn dropbutton navigation-menu-item {% if item.url == category.url %}active {% endif %}">
+        <li onclick="displayToogle()"
+          class="dropbtn dropbutton navigation-menu-item
+           {% if item.url == category.url %} active {% endif %}">
           {% if item.icon != "" %}
               <i class="nav-item-icon fa fa-lg {{ item.icon }} dropbutton" aria-hidden="true"></i>
               <span class="nav-item-text dropbutton">{{ item.title }}</span>
@@ -16,12 +12,33 @@
         </li>
    {% endfor %}
     <div id="docVersionDropdown" class="dropdown-content">
-        <a href="{{ site.data.commons.stable_version | append: 'docs/' }}">
-            <span>{{ stable_version.title }} - {{ site.data.doc-versions.stable }}</span>
+        <a href="{{ site.data.commons.stable_version |append: 'docs/' }}">
+            <span>
+              {{ stable_version.title }} -
+              {{ site.data.doc-versions.stable }}
+            </span>
         </a>
 
+        <a href="{{ next_version.url |append: 'docs/' }}">
+            <span>
+              {{ next_version.title }} -
+              {{ site.data.doc-versions.next }}
+            </span>
+        </a>
+
+        <a href="{{ previous_version.url |append: 'docs/' }}">
+            <span>
+              {{ previous_version.title }} -
+              {{ site.data.doc-versions.previous }}
+            </span>
+        </a>
+
+        <div class="inner">&nbsp;</div>
+
         {% for item in site.data.doc-versions.docVersions %}
-          {% if item.url != site.data.commons.stable_version %}
+          {% if item.url != stable_version.url
+             and item.url != next_version.url
+              and item.url != previous_version.url %}
               <a href="{{ item.url | append: 'docs/' }}">
                   <span>{{ item.title }}</span>
               </a>
