--- a/modules/docs/arrow-docs/docs/_includes/_sidebar-doc-versions.html
+++ b/modules/docs/arrow-docs/docs/_includes/_sidebar-doc-versions.html
@@ -1,33 +1,51 @@
-{% for item in site.data.doc-versions.docVersions %}
-    {% if item.url == site.data.commons.stable_version %}
-      {% assign stable_version = item %}
-    {% endif %}
-{% endfor %}
-
-    <ul class="sidebar-doc-versions sidebar-nav">
-        <li class="sidebar-nav-item">
-            <a href="{% if item.url %}{{item.url}}{% else %}#{% endif %}">
-                <span>Documentation</span>
-                {% if item.nested_options %}
-                    <i class="fa fa-angle-right"></i>
-                {% endif%}
-            </a>
-            <ul>
-                <li>
-                    <a href="{{ site.data.commons.stable_version | append: 'docs/' }}">
-                        <span>{{ stable_version.title }} - {{ site.data.doc-versions.stable }}</span>
-                        <span id="stable" class="disabled">{{ stable_version.url }}</span>
-                    </a>
-                </li>
-                {% for item in site.data.doc-versions.docVersions %}
-                  {% if item.url != site.data.commons.stable_version %}
-                    <li>
-                        <a href="{{ item.url | append: 'docs/' }}">
-                            <span>{{ item.title }}</span>
-                        </a>
-                    </li>
-                  {% endif %}
-                {% endfor %}
-            </ul>
+<div>
+  <ul class="sidebar-doc-versions sidebar-nav">
+    <li class="sidebar-nav-item">
+      <a href="{% if item.url %}{{item.url}}{% else %}#{% endif %}">
+        <span>Documentation</span> {% if item.nested_options %}
+        <i class="fa fa-angle-right"></i> {% endif%}
+      </a>
+      <ul>
+        <li>
+          <a href="{{ site.data.commons.stable_version | append: 'docs/' }}">
+            <span>
+              {{ stable_version.title }} - {{ site.data.doc-versions.stable }}
+            </span>
+          </a>
         </li>
-    </ul>
+
+        <li>
+          <a href="{{ next_version.url | append: 'docs/' }}">
+              <span>
+                {{ next_version.title }} -
+                {{ site.data.doc-versions.next }}
+              </span>
+          </a>
+        </li>
+
+        <li>
+          <a href="{{ previous_version.url | append: 'docs/' }}">
+              <span>
+                {{ previous_version.title }} -
+                {{ site.data.doc-versions.previous }}
+              </span>
+          </a>
+        </li>
+
+        <div class="inner">&nbsp;</div>
+
+        {% for item in site.data.doc-versions.docVersions %}
+          {% if item.url != stable_version.url
+             and item.url != next_version.url
+              and item.url != previous_version.url %}
+              <li>
+                <a href="{{ item.url | append: 'docs/' }}">
+                  <span>{{ item.title }}</span>
+                </a>
+              </li>
+          {% endif %}
+       {% endfor %}
+      </ul>
+    </li>
+  </ul>
+</div>
