--- a/modules/docs/arrow-docs/docs/_sass/components/_sidebar-nav.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_sidebar-nav.scss
@@ -65,11 +65,6 @@
                 }
             }
         }
-
-        .inner {
-          height: 1px;
-          border-bottom: solid 1px rgba(255, 255, 255, 0.5);
-        }
     }
 }
 
@@ -94,11 +89,15 @@
          z-index: 1;
          box-shadow: rgba(0, 0, 0, 0.3) 0px 8px 16px 0px;
          background: $brand-primary;
-         
+
          li {
            a {
              font-size: 0.800rem;
            }
+         }
+
+         li:nth-child(4) {
+           border-top: solid 1px rgba(255, 255, 255, 0.5);
          }
        }
     }
