--- a/modules/docs/arrow-docs/docs/_sass/components/_navigation.scss
+++ b/modules/docs/arrow-docs/docs/_sass/components/_navigation.scss
@@ -49,7 +49,6 @@
           border: none;
           background: transparent;
           color: $white;
-          font-family: $brand-font-family;
           font-size: 0.875rem;
           margin-bottom: 10px;
         }
@@ -57,6 +56,7 @@
         .dropdown {
           position: relative;
           display: inline-block;
+          outline: 0px;
 
           a {
             &:hover {
